@@ -298,6 +298,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 21574) Redirects can now have "303 See Other" HTTP status
 * EditPage refactored to allow extensions to derive new edit modes much easier.
 * (bug 21826) Subsections of Special:Version now also have anchors
+* (bug 19791) Add URL of file source as comment to thumbs (for ImageMagick)
 
 === Bug fixes in 1.16 ===
 
